--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -859,14 +859,14 @@
                     <div class="select-wrapper">
                         <select id="llm-provider" onchange="onLlmProviderChange()">
                             <option value="gemini" selected>Gemini</option>
-                            <option value="groq">Groq</option>
-                            <option value="deepseek">DeepSeek</option>
-                            <option value="qwen">Qwen</option>
                             <option value="together">Together AI</option>
                             <option value="mistral">Mistral</option>
                             <option value="openai">OpenAI</option>
-                            <option value="claude">Claude</option>
-                            <option value="grok">Grok</option>
+                             <option value="groq">Groq</option>
+                            <option value="deepseek">DeepSeek</option>
+                            <option value="qwen">Qwen</option>
+<!--                            <option value="claude">Claude</option>-->
+<!--                            <option value="grok">Grok</option>-->
                         </select>
                     </div>
                 </div>
